tests/snapshots/semantic_package_snapshots__public_package_single_module_pkg_stable.snap
---
source: tests/semantic_package_snapshots.rs
expression: out
---
unnecessary_public_entry:sources/single_module.move:47: 12: warning: unnecessary `entry` on a `public` function: `entry` on `public` functions limits composability as it adds restrictions, e.g. the type of each return value must have `drop`. `entry` on `public` is only meaningful in niche scenarios.
