tests/snapshots/semantic_package_snapshots__share_owned_authority_pkg_experimental.snap
---
source: tests/semantic_package_snapshots.rs
expression: out
---
capability_escape:sources/share_authority.move:138: 9: warning: Capability `cap#0#0` warning: capability transferred without authorization check
capability_escape:sources/share_authority.move:171: 9: warning: Capability `kiosk#0#0` dangerous: capability stored in shared object
capability_escape:sources/share_authority.move:73: 9: warning: Capability `cap#0#0` dangerous: capability stored in shared object
capability_escape:sources/share_authority.move:79: 9: warning: Capability `cap#0#0` dangerous: capability stored in shared object
capability_escape:sources/share_authority.move:85: 9: warning: Capability `auth#0#0` dangerous: capability stored in shared object
capability_transfer_v2:sources/share_authority.move:138: 9: warning: Capability-like object `negative_cases::TransferableCap` transferred in `transfer_cap`. Ensure the recipient is authorized (e.g., tx_context::sender(ctx)).
custom_state_change:sources/share_authority.move:136: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom transfer function.
custom_state_change:sources/share_authority.move:147: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom freeze function.
custom_state_change:sources/share_authority.move:169: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom share function.
custom_state_change:sources/share_authority.move:71: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom share function.
custom_state_change:sources/share_authority.move:77: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom share function.
public_mut_tx_context:sources/share_authority.move:136: 56: warning: prefer '&mut TxContext' over '&TxContext': 'public' functions should prefer '&mut TxContext' over '&TxContext' for better upgradability.
self_transfer:sources/share_authority.move:138: 9: warning: non-composable transfer to sender: Transfer of an object to transaction sender address
share_owned:sources/share_authority.move:171: 9: warning: possible owned object share: Potential abort from a (potentially) owned object created by a different transaction.
share_owned:sources/share_authority.move:73: 9: warning: possible owned object share: Potential abort from a (potentially) owned object created by a different transaction.
share_owned:sources/share_authority.move:79: 9: warning: possible owned object share: Potential abort from a (potentially) owned object created by a different transaction.
share_owned:sources/share_authority.move:85: 9: warning: possible owned object share: Potential abort from a (potentially) owned object created by a different transaction.
