tests/snapshots/semantic_package_snapshots__share_owned_authority_pkg_preview.snap
---
source: tests/semantic_package_snapshots.rs
expression: out
---
custom_state_change:sources/share_authority.move:136: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom transfer function.
custom_state_change:sources/share_authority.move:147: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom freeze function.
custom_state_change:sources/share_authority.move:169: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom share function.
custom_state_change:sources/share_authority.move:71: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom share function.
custom_state_change:sources/share_authority.move:77: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom share function.
public_mut_tx_context:sources/share_authority.move:136: 56: warning: prefer '&mut TxContext' over '&TxContext': 'public' functions should prefer '&mut TxContext' over '&TxContext' for better upgradability.
shared_capability_object:sources/share_authority.move:171: 9: warning: Sharing capability-like object `suppression_cases::Kiosk` in `create_shared_kiosk` makes it publicly accessible. Ensure this cannot be used to bypass authorization, or suppress if intentional.
shared_capability_object:sources/share_authority.move:73: 9: warning: Sharing capability-like object `positive_cases::AdminCap` in `share_admin_cap` makes it publicly accessible. Ensure this cannot be used to bypass authorization, or suppress if intentional.
shared_capability_object:sources/share_authority.move:79: 9: warning: Sharing capability-like object `positive_cases::TreasuryCap` in `share_treasury_cap` makes it publicly accessible. Ensure this cannot be used to bypass authorization, or suppress if intentional.
shared_capability_object:sources/share_authority.move:85: 9: warning: Sharing capability-like object `positive_cases::Authority` in `public_share_authority` makes it publicly accessible. Ensure this cannot be used to bypass authorization, or suppress if intentional.
shared_capability_object:sources/share_authority.move:94: 9: warning: Sharing capability-like object `positive_cases::AdminCap` in `bad_init` makes it publicly accessible. Ensure this cannot be used to bypass authorization, or suppress if intentional.
