tests/snapshots/semantic_package_snapshots__share_owned_authority_pkg_stable.snap
---
source: tests/semantic_package_snapshots.rs
expression: out
---
custom_state_change:sources/share_authority.move:136: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom transfer function.
custom_state_change:sources/share_authority.move:147: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom freeze function.
custom_state_change:sources/share_authority.move:169: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom share function.
custom_state_change:sources/share_authority.move:71: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom share function.
custom_state_change:sources/share_authority.move:77: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom share function.
public_mut_tx_context:sources/share_authority.move:136: 56: warning: prefer '&mut TxContext' over '&TxContext': 'public' functions should prefer '&mut TxContext' over '&TxContext' for better upgradability.
self_transfer:sources/share_authority.move:138: 9: warning: non-composable transfer to sender: Transfer of an object to transaction sender address
share_owned:sources/share_authority.move:171: 9: warning: possible owned object share: Potential abort from a (potentially) owned object created by a different transaction.
share_owned:sources/share_authority.move:73: 9: warning: possible owned object share: Potential abort from a (potentially) owned object created by a different transaction.
share_owned:sources/share_authority.move:79: 9: warning: possible owned object share: Potential abort from a (potentially) owned object created by a different transaction.
share_owned:sources/share_authority.move:85: 9: warning: possible owned object share: Potential abort from a (potentially) owned object created by a different transaction.
share_owned_authority:sources/share_authority.move:171: 9: warning: Sharing `suppression_cases::Kiosk` (has key+store) in `create_shared_kiosk` makes it publicly accessible. This is dangerous for authority objects (capabilities). If this is intentional shared state, suppress with #[ext(move_clippy(allow(share_owned_authority)))].
share_owned_authority:sources/share_authority.move:73: 9: warning: Sharing `positive_cases::AdminCap` (has key+store) in `share_admin_cap` makes it publicly accessible. This is dangerous for authority objects (capabilities). If this is intentional shared state, suppress with #[ext(move_clippy(allow(share_owned_authority)))].
share_owned_authority:sources/share_authority.move:79: 9: warning: Sharing `positive_cases::TreasuryCap` (has key+store) in `share_treasury_cap` makes it publicly accessible. This is dangerous for authority objects (capabilities). If this is intentional shared state, suppress with #[ext(move_clippy(allow(share_owned_authority)))].
share_owned_authority:sources/share_authority.move:85: 9: warning: Sharing `positive_cases::Authority` (has key+store) in `public_share_authority` makes it publicly accessible. This is dangerous for authority objects (capabilities). If this is intentional shared state, suppress with #[ext(move_clippy(allow(share_owned_authority)))].
share_owned_authority:sources/share_authority.move:94: 9: warning: Sharing `positive_cases::AdminCap` (has key+store) in `bad_init` makes it publicly accessible. This is dangerous for authority objects (capabilities). If this is intentional shared state, suppress with #[ext(move_clippy(allow(share_owned_authority)))].
