tests/snapshots/semantic_package_snapshots__shared_capability_object_pkg_preview.snap
---
source: tests/semantic_package_snapshots.rs
expression: out
---
custom_state_change:sources/shared_capability_object.move:37: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom share function.
shared_capability_object:sources/shared_capability_object.move:38: 9: warning: Sharing capability-like object `cases::AdminCap` in `positive` makes it publicly accessible. Ensure this cannot be used to bypass authorization, or suppress if intentional.
shared_capability_object:sources/shared_capability_object.move:47: 9: warning: Sharing capability-like object `cases::AdminCap` in `suppressed` makes it publicly accessible. Ensure this cannot be used to bypass authorization, or suppress if intentional.
