tests/snapshots/semantic_package_snapshots__unchecked_div_pkg_preview.snap
---
source: tests/semantic_package_snapshots.rs
expression: out
---
unchecked_division_v2:sources/unchecked_div.move:14: 9: warning: Division or modulo operation without zero-check validation
unchecked_division_v2:sources/unchecked_div.move:20: 9: warning: Division or modulo operation without zero-check validation
unchecked_division_v2:sources/unchecked_div.move:26: 9: warning: Division or modulo operation without zero-check validation
unchecked_division_v2:sources/unchecked_div.move:40: 9: warning: Division or modulo operation without zero-check validation
unchecked_division_v2:sources/unchecked_div.move:46: 9: warning: Division or modulo operation without zero-check validation
unchecked_division_v2:sources/unchecked_div.move:58: 13: warning: Division or modulo operation without zero-check validation
unchecked_division_v2:sources/unchecked_div.move:9: 9: warning: Division or modulo operation without zero-check validation
